# AppChat-Rewrite

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
migrations/: 0000_legal_millenium_guard.sql  0001_careful_gladiator.sql  0002_small_magdalene.sql  0003_right_jackal.sql  0004_calm_iguana.sql  0005_add_last_seen_message_id.sql
src/: main.rs
src/api/: error.rs  success.rs
src/configs/: mod.rs
src/constants/: mod.rs
src/middlewares/: mod.rs
src/modules/: mod.rs
src/modules/conversation/: handle.rs  model.rs  repository.rs  repository_pg.rs  route.rs  schema.rs  service.rs
src/modules/file_upload/: handle.rs  mod.rs  model.rs  repository.rs  repository_pg.rs  route.rs  schema.rs  service.rs
src/modules/friend/: handle.rs  model.rs  repository.rs  repository_pg.rs  route.rs  schema.rs  service.rs
src/modules/message/: handle.rs  model.rs  repository.rs  repository_pg.rs  route.rs  schema.rs  service.rs
src/modules/user/: handle.rs  model.rs  repository.rs  repository_pg.rs  route.rs  schema.rs  service.rs
src/modules/websocket/: events.rs  handler.rs  message.rs  mod.rs  presence.rs  server.rs  session.rs
src/test/: mod.rs
src/utils/: mod.rs
test/: post.lua
