[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.29"
rand_core = "0.6.4"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
rand = "0.8"
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "migrate",
  "tls-rustls",
] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
futures-util = "0.3.31"
lazy_static = "1.5.0"
async-trait = "0.1.89"
dotenvy = "0.15.7"
deadpool-redis = { version = "0.22.1", features = ["serde"] }
tokio = { version = "1.49.0", features = ["macros"] }
actix-cors = "0.7.1"
